--- a/.gitignore
+++ b/.gitignore
@@ -7,10 +7,18 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
+# Dependencies
 node_modules
+
+# Build artifacts
 dist
 dist-ssr
 *.local
+
+# Environment variables
+.env
+.env.*
+!.env.production
 
 # Editor directories and files
 .vscode/*
